src/index.css
:root {
  /* Colors */
  --primary-white-color: rgb(27 29 42);
  --default-body-color: rgb(12 15 29);
  --default-hover-background-color: rgb(52 55 70);
  --text-color: rgb(206 207 209);
  --hover-color: rgb(101 126 248);

  /* Button */
  --primary-button-color: rgb(16, 96, 255);
  --button-hover-color: rgb(53 119 255);

  /* Vars */
  --border-radius: 1.6rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

html {
  line-height: 1.15;
  font-size: 10px;
  -webkit-text-size-adjust: 100%;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  min-height: 100vh;
  color: var(--text-color);
  background-color: var(--default-body-color);
  font-size: 1.6rem;
}

a {
  display: block;
  text-decoration: none;
  color: var(--text-color);
}

